--- a/CompressByHufmanTree/CompressByHufmanTree/CompressByHufmanTree.vcxproj
+++ b/CompressByHufmanTree/CompressByHufmanTree/CompressByHufmanTree.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClCompile Include="CompressByHufmanTree.cpp" />
     <ClCompile Include="HuffmanTree.cpp" />
+    <ClCompile Include="node.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
