--- a/CompressByHufmanTree/CompressByHufmanTree/CompressByHufmanTree.vcxproj.filters
+++ b/CompressByHufmanTree/CompressByHufmanTree/CompressByHufmanTree.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="HuffmanTree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="node.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
